--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Bootstrap links -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
 <body>
-    
+
+    <div class="container">
+        <form class="form w-50 m-auto">
+            <h2 class="h2 text-center">Registration</h2>
+            <div class="formContent">
+                <div class="mb-3">
+                    <label for="ism" class="form-label">Ismingiz</label>
+                    <input type="text" class="form-control" id="ism" placeholder="Enter your name...">
+                </div>
+
+                <div class="mb-3">
+                    <label for="fam" class="form-label">Familiyangiz</label>
+                    <input type="text" class="form-control" id="fam" placeholder="Enter your surname...">
+                </div>
+
+                <div class="mb-3">
+                    <label for="age" class="form-label">Yoshingiz</label>
+                    <input type="number" class="form-control" id="yosh" placeholder="Enter your surname...">
+                </div>
+
+                <div class="mb-3">
+                    <button class="btn btn-success">Save</button>
+                </div>
+            </div>
+        </form>
+
+        <div class="wrapper row g-2">
+            
+        </div>
+
+    </div>
+
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
